Bug 855520 - Add spacing around no element in style inspector; r=mratcliffe
UltraBlame original commit: 458bbef2075c89fe0a48ddd57fa965be523bf99a

--- a/browser/themes/windows/devtools/ruleview.css
+++ b/browser/themes/windows/devtools/ruleview.css
@@ -127,11 +127,27 @@ underline
 ruleview
 -
 rule
+#
+noResults
 {
 padding
 :
 2px
 4px
+;
+}
+#
+noResults
+{
+font
+:
+message
+-
+box
+;
+color
+:
+GrayText
 ;
 }
 .
